2000-07-03  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc-bm.el (mhc-bm-icon-alist): New variable.
	(Renamed from mhc-bm-category-icon-alist.)
	All other related portions are changed.
	(toplevel): Put CVS date keyword.

	* emacs/mhc-xmas.el (mhc-xmas-icon-alist): New variable.
	(Renamed from mhc-xmas-category-icon-alist.)
	All other related portions are changed.
	(toplevel): Put CVS date keyword.

	* emacs/mhc-summary.el (mhc-summary-line-format-alist):	Quote
	PROP-TYPE.
	(mhc-summary-todo-line-format-alist): Ditto.
	(mhc-summary-line-format-alist): Insert conflict icon.
	(mhc-summary/line-insert): Insert only if argument is string.

	* icons/Conflict.xbm, icons/Conflict.xpm: New files.

2000-06-30  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc.el (mhc-current-date): Get dayinfo property safe. (thanks to Teranishi-san)

	* emacs/mhc-calendar.el (mhc-calendar/in-date-p): Renamed 'mhc-calendar/in-day-p'.

2000-06-28  MIYOSHI Masanori  <miyoshi@ask.ne.jp>

	* ruby-ext/lib/mhc-kconv.rb: New file.

	* ruby-ext/lib/mhc-date.rb: Convert coding system with MhcKconv.

	* ruby-ext/lib/mhc-gtk.rb: Ditto.

	* today: Ditto.

	* palm2mhc: Ditto.

	* mhc2palm: Ditto.

	* mhc-sync: Ditto.

	* gemcal: Ditto.
	
2000-06-28  Yuuichi Teranishi  <teranisi@gohome.org>

	* emacs/mhc-wl.el (mhc-wl-summary-mode-setup):
	Set `wl-summary-buffer-next-folder-func' and
	`wl-summary-buffer-prev-folder-func'.

2000-06-28  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/mhc-summary.el (mhc-summary-insert-contents): If mailer eq 'direct,
	disable icon and insert \n.
	(mhc-summary-line-insert): Set background color, if today.

	* emacs/mhc-calendar.el (mhc-calendar-insert-summary-contents): Follow up new method.

	* emacs/mhc-ps.el (mhc-ps/substring): Use mhc-string-to-char-list
	instead of string-to-list.

2000-06-28  Yuuichi Teranishi  <teranisi@quickhack.net>

	* emacs/mhc.el (mhc-scan-month): `set-buffer-modified-p' as nil.
