@@ -1,0 +1,6 @@
+#define Party_width 16
+#define Party_height 16
+static unsigned char Party_bits[] = {
+  0x00, 0x00, 0xf0, 0x01, 0x08, 0x02, 0x04, 0x04, 0x8c, 0x1f, 0x94, 0x24,
+  0x54, 0x5c, 0x24, 0x54, 0xfc, 0x57, 0xfc, 0x57, 0xfc, 0x2f, 0xfc, 0x17,
+  0xfc, 0x0f, 0xfc, 0x07, 0xf8, 0x03, 0x00, 0x00, };
