@@ -1,0 +1,23 @@
+/* XPM */
+static char * Party_xpm[] = {
+"16 16 4 1",
+" 	s backgroundColor c None",
+".	c #000000000000",
+"X	c #F7DEFFFFE79D",
+"o	c #FFFFE79D2081",
+"                ",
+"    .....       ",
+"   .XXXXX.      ",
+"  .XXXXXXX.     ",
+"  ..XXX......   ",
+"  .X.XX.XX.XX.  ",
+"  .X.X.XXX...X. ",
+"  .XX.XXXX. .X. ",
+"  .ooooooo. .X. ",
+"  .ooooooo. .X. ",
+"  .ooooooo..X.  ",
+"  .ooooooo.X.   ",
+"  .ooooooo..    ",
+"  .ooooooo.     ",
+"   .......      ",
+"                "};
